CRUD aded to client with server.

--- a/client/src/app/employee-details/employee-details.component.html
+++ b/client/src/app/employee-details/employee-details.component.html
@@ -29,6 +29,7 @@
     
     <button type="button" (click)="goBack()">Go back</button>
     <button type="button" (click)="updateEmployee()">Update</button>
+    <button type="button" (click)="deleteEmployee()">Delete</button>
 
   </div>
 
