Valided login and styled login.

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h2>User Employees</h2>
-<router-outlet></router-outlet>
+<div class="main">
+    <h2 class="center">User Employees</h2>
+    <router-outlet></router-outlet>
+</div>
+    
