--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,70 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    font-family: 'Inter', sans-serif;
+    box-sizing: border-box;
+}
+
+
+.input--wrap{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 20px 0;
+    padding: 10px;
+    
+}
+
+.input--label{
+    display: flex;
+    align-items: center;
+    font-size: 0.8rem;
+    margin: 0 0 5px 10px;
+}
+
+.input--packed{
+
+}
+
+.input--input{
+    width: auto;
+    padding:15px;
+    border-radius:15px;
+    border: 1px solid transparent;
+    transition: .3s border-color;
+    box-shadow:4px 4px 10px rgba(0,0,0,0.20);
+    margin-right: 10px;
+}
+
+.input--input:hover {
+    border: 1px solid #aaa;
+}
+
+.input--input:focus{
+    outline: none;
+}
+
+.input--hints{
+    display: flex;
+    min-height: 26px;
+}
+
+.input--hint{
+    font-size: 0.5rem;
+}
+
+.center{
+    margin: 0 auto;
+    text-align: center;
+}
+
+.red{
+    color: #c62828;
+}
+
+.ng-valid[required], .ng-valid.required  {
+    border: 1px solid #42A948;
+  }
+  
+.ng-invalid:not(form)  {
+    border: 1px solid #c62828; 
+}
